# githubModels

./: .env-template  az-aistudio-modelcat.py  az-inference-API.py  az-inference-image.py  az-inference-tsuzumi-mc.py  openai-sdk.py  pyproject.toml
